--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,8 @@ body{
 }
 header{
     margin: 0px 100px 0px;
-    padding-top: 30px;
-    height: 100vh;
+    padding: 30px 0px 30px;
+    height: auto;
     background-color: #fff;
 }
 .btn-primary{
@@ -42,7 +42,7 @@ nav ul li a{
 }
 .header-text{
     width: 450px;
-    border: 1px solid;
+    
     text-align: center;
     margin: 0 auto;
     padding: 30px 0px;
@@ -50,15 +50,77 @@ nav ul li a{
 .header-text > h1, p, button{
     margin-bottom: 20px;
 }
-
+.img{
+    margin: 0 auto;
+    width: 80%;
+}
+.img img{
+    width: 100%;
+    
+}
+/* main section start here */
+.work-explain{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 80%;
+    gap: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    
+}
+.img-explain{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+}
+.explain-text > h1, p, button{
+    margin-bottom: 10px;
+}
+#tomato{
+    color: rgb(240, 114, 198);
+}
+#light{
+    color: rgb(145, 145, 55);
+}
 /* media quary start here */
 @media screen and (max-width:577px){
     .menu-bar{
         flex-direction: column;
+        width: 100%;
     }
     nav ul{
         flex-direction: column;
         margin-top: 20px;
     }
-   
+    .header-text{
+        width: 100%;
+        
+        text-align: center;
+        margin: 0 auto;
+        padding: 30px 0px;
+    }
+    .img{
+        margin: 0 auto;
+        width: 100%;
+        padding: 5px;
+    }
+    .work-explain{
+        flex-direction: column-reverse;
+        width: 80%;
+        padding: 30px 40px;
+
+    }
+    .img-explain{
+        grid-template-columns: repeat(1, 1fr);
+       
+    }
+    .explain-text > h1, p, button{
+        margin-bottom: 10px;
+    }
+    .explain-text button{
+      position: relative;
+      left: 35%;
+    }
 }
